--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,12 @@
   "public": true,
   "builds": [
     { "src": "build/**", "use": "@vercel/static" }
+    
   ],
+  "env": {
+    "NEXT_PUBLIC_API_URL": "https://school-management-backend-production.up.railway.app"
+  },
+  
   "routes": [
     { "src": "/(.*)", "dest": "/build/$1" }
   ]
