--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -21,6 +21,12 @@ jobs:
       - name: ⚙️ Install Vercel CLI
         run: npm install -g vercel
 
+      - name: 🧰 Install Watchdog
+        run: |
+          python -m pip install --upgrade pip
+          pip install watchdog
+
+
       - name: 🧰 Build project
         run: python build.py  # your custom build step (adjust as needed)
 
